--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h1 class="title">Projects</h1>
             <div class="projects">
                 <div class="small-projects">
-                    <img src="images/anhdaidien.webp" alt="">
+                    <img src="images/anhproject1.webp" alt="">
                     <h2 class="project-title">Project One</h2>
                     <div class="click">
                         <a href="">
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="small-projects">
-                    <img src="images/anhdaidien.webp" alt="">
+                    <img src="images/anhproject2.webp" alt="">
                     <h2 class="project-title">Project Two</h2>
                     <div class="click">
                         <a href="">
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="small-projects">
-                    <img src="images/anhdaidien.webp" alt="">
+                    <img src="images/anhproject3.webp" alt="">
                     <h2 class="project-title">Project Three</h2>
                     <div class="click">
                         <a href="">
